Finish Basic HTML Skeleton, Start CSS

--- a/index.html
+++ b/index.html
@@ -8,9 +8,144 @@
   <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
 </head>
 <body>
-
-
-  
+  <!-- Navigation -->
+  <header>
+    <div class="navigation">
+      <div id="menu">
+        <button class="menu"></button>
+        <div class="hidden">
+        </div>
+      </div>
+      <div class="type">
+      </div>
+    </div>
+    <div class="history">
+    </div>
+  </header>
+  <!-- Display -->
+  <div id="display">
+    <div class="display">
+    </div>
+  </div>
+  <!-- Keyboard -->
+  <div id="keyboard">
+    <table>
+      <!-- Memory -->
+      <tr id="memory">
+        <td id="memory_clear">
+          <button class="memory"></button>
+        </td>
+        <td id="memory_recall">
+          <button class="memory"></button>
+        </td>
+        <td id="memory_add">
+          <button class="memory"></button>
+        </td>
+        <td id="memory_subtract">
+          <button class="memory"></button>
+        </td>
+        <td id="memory_store">
+          <button class="memory"></button>
+        </td>
+        <td id="memory_history">
+          <button class="memory"></button>
+          <button class="memory_history"></button>
+          <div class="hidden">
+          </div>  
+        </td>
+      </tr>
+      <!-- Row One -->
+      <tr>
+        <td id="percent">
+          <button class="function"></button>
+        </td>
+        <td id="square_root">
+          <button class="function"></button>
+        </td>
+        <td id="x_squared">
+          <button class="function"></button>
+        </td>
+        <td id="reciprocal">
+          <button class="function"></button>
+        </td>
+      </tr>
+      <!-- Row Two -->
+      <tr>
+        <td id="clear_entry">
+          <button class="function"></button>
+        </td>
+        <td id="clear_all">
+          <button class="function"></button>
+        </td>
+        <td id="clear_character">
+          <button class="function"></button>
+        </td>
+        <td id="divide">
+          <button class="function"></button>
+        </td>
+      </tr>
+      <!-- Row Three -->
+      <tr>
+        <td id="number_7">
+          <button class="number"></button>
+        </td>
+        <td id="number_8">
+          <button class="number"></button>
+        </td>
+        <td id="number_9">
+          <button class="number"></button>
+        </td>
+        <td id="multiply">
+          <button class="function"></button>
+        </td>
+      </tr>
+      <!-- Row Four -->
+      <tr>
+        <td id="number_4">
+          <button class="number"></button>
+        </td>
+        <td id="number_5">
+          <button class="number"></button>
+        </td>
+        <td id="number_6">
+          <button class="number"></button>
+        </td>
+        <td id="subtract">
+          <button class="function"></button>
+        </td>
+      </tr>
+      <!-- Row Five -->
+      <tr>
+        <td id="number_1">
+          <button class="number"></button>
+        </td>
+        <td id="number_2">
+          <button class="number"></button>
+        </td>
+        <td id="number_3">
+          <button class="number"></button>
+        </td>
+        <td id="add">
+          <button class="function"></button>
+        </td>
+      </tr>
+      <!-- Final Row -->
+      <tr>
+        <td id="negate">
+          <button class="function"></button>
+        </td>
+        <td id="number_0">
+          <button class="number"></button>
+        </td>
+        <td id="decimal">
+          <button class="function"></button>
+        </td>
+        <td id="evaluate">
+          <button class="function"></button>
+        </td>
+      </tr>
+    </table>
+  </div>
   <!-- Scripts -->
   <script src="./resources/js/main.js"></script>
 </body>
