finish Operators, Numbers, and Evaluate

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
   </header>
   <!-- Display -->
-  <div class="flex-row" id="display"></div>
+  <div class="flex-column display">
+    <div class="flex-row" id="secondary-display"></div>
+    <div class="flex-row" id="display"></div>
+  </div>
   <!-- Keyboard -->
   <div id="keyboard" class="flex-column">
     <!-- Memory -->
