32/32 buttons working. Rough Draft complete

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <!-- Navigation -->
   <header class="flex-row">
     <nav class="flex-row">
-      <div id="menu">
-        <button class="menu">&#9776;</button>
-        <div class="hidden" id="menu">
+      <div class="menu">
+        <button id="menu">&#9776;</button>
+        <div class="hidden" id="hidden-menu">
         </div>
       </div>
       <h1 class="type">Standard</h1>
     </nav>
     <div class="history">
-      <button class="menu">Hv</button>
+      <button id="history">Hv</button>
+      <div class="hidden" id="hidden-history">
     </div>
   </header>
   <!-- Display -->
