Created Alternate Solution using a single For Loop

--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <!-- Navigation -->
   <header class="flex-row">
     <nav class="flex-row">
-      <div class="menu">
-        <button id="menu">&#9776;</button>
-        <div class="hidden" id="hidden-menu">
+      <div id="menu">
+        <button class="menu">M<</button>
+        <div class="hidden" id="menu">
         </div>
       </div>
       <h1 class="type">Standard</h1>
     </nav>
     <div class="history">
-      <button id="history">Hv</button>
-      <div class="hidden" id="hidden-history">
+      <button class="menu">Hv</button>
     </div>
   </header>
   <!-- Display -->
@@ -57,10 +56,10 @@
         <button id="percent">%</button>
       </div>
       <div class="button">
-        <button id="squareroot">&radic;</button>
+        <button id="squareroot">-/</button>
       </div>
       <div class="button">
-        <button id="power">x&sup2;</button>
+        <button id="power">x^2</button>
       </div>
       <div class="button">
         <button id="reciprocal">1/x</button>
@@ -75,10 +74,10 @@
         <button id="clear-all">C</button>
       </div>
       <div class="button">
-        <button id="delete-last">&#9746;</button>
+        <button id="delete-last">BS</button>
       </div>
       <div class="button">
-        <button id="divide">&divide;</button>
+        <button id="divide">/</button>
       </div>
     </div>
     <!-- Row 3 -->
@@ -93,7 +92,7 @@
         <button class="number" id="btn-9">9</button>
       </div>
       <div class="button">
-        <button id="multiply">&times;</button>
+        <button id="multiply">*</button>
       </div>
     </div>
     <!-- Row 4 -->
@@ -108,7 +107,7 @@
         <button class="number" id="btn-6">6</button>
       </div>
       <div class="button">
-        <button id="minus">&minus;</button>
+        <button id="minus">-</button>
       </div>
     </div>
     <!-- Row 5 -->
@@ -123,13 +122,13 @@
         <button class="number" id="btn-3">3</button>
       </div>
       <div class="button">
-        <button id="add">&plus;</button>
+        <button id="add">+</button>
       </div>
     </div>
     <!-- Row 6 -->
     <div class="row flex-row">
       <div class="button">
-        <button id="plus-minus">&plusmn;</button>
+        <button id="plus-minus">+/-</button>
       </div>
       <div class="button">
         <button class="number" id="btn-0">0</button>
@@ -143,6 +142,6 @@
     </div>
   </div>
   <!-- Scripts -->
-  <script src="./resources/js/main.js"></script>
+  <script src="./resources/js/alternate_solution.js"></script>
 </body>
 </html>
