Trimmed Unnecessary Console.Logs from Alt Solution.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <!-- Navigation -->
   <header class="flex-row">
     <nav class="flex-row">
-      <div id="menu">
-        <button class="menu">M<</button>
-        <div class="hidden" id="menu">
+      <div>
+        <button class="menu" id="menu">M<</button>
+        <div class="hidden">
         </div>
       </div>
       <h1 class="type">Standard</h1>
     </nav>
     <div class="history">
-      <button class="menu">Hv</button>
+      <button class="menu" id="history">Hv</button>
     </div>
   </header>
   <!-- Display -->
