Running Alternate Solution

--- a/index.html
+++ b/index.html
@@ -142,6 +142,6 @@
     </div>
   </div>
   <!-- Scripts -->
-  <script src="./resources/js/main.js"></script>
+  <script src="./resources/js/alternate_solution.js"></script>
 </body>
 </html>
